# ucsd_f1tenth_simulator

./: README.md
f1tenth_description/: CMakeLists.txt  package.xml
f1tenth_description/launch/: f1tenth_ackermann.launch
f1tenth_description/urdf/: em_3905.urdf.xacro  traxxas_rally.urdf.xacro
f1tenth_ucsd_gazebo/: CMakeLists.txt  package.xml
f1tenth_ucsd_gazebo/launch/: launch_vehicle.launch  main.launch  ucsd_track_v1_world.launch
f1tenth_ucsd_gazebo/scripts/: ackermann_controller.py
ucsd_f1tenth_description/: package.xml
ucsd_f1tenth_description/launch/: f1tenth_ackermann.launch
ucsd_f1tenth_description/meshes/: db5.stl
ucsd_f1tenth_description/urdf/: sensors.xacro  traxxas_rally.urdf.xacro
ucsd_f1tenth_gazebo/: CMakeLists.txt
ucsd_f1tenth_gazebo/launch/: launch_vehicle.launch  main.launch  ucsd_track_v1_world.launch
ucsd_f1tenth_gazebo/scripts/: ackermann_controller.py  cmd_vel_to_ackermann_drive.py  odometry_tf_publisher.py
ucsd_f1tenth_gazebo/worlds/: ucsd_track_v1.world
ucsd_f1tenth_navigation/: CMakeLists.txt  package.xml
ucsd_f1tenth_navigation/config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  localization_double.yaml  planner.yaml
ucsd_f1tenth_navigation/launch/: start_map_server.launch  start_move_base.launch  start_navigation.launch  start_navsat.launch
ucsd_f1tenth_navigation/scripts/: move_base_test.py
ucsd_f1tenth_navigation_v2/: CMakeLists.txt  package.xml
ucsd_f1tenth_navigation_v2/launch/: follow_waypoints.launch
ucsd_f1tenth_navigation_v2/scripts/: follow_waypoints.py
(+3 files in other folders)
